[package]
name = "page-table"
description = "Definations of the page table for common architectures."
version = "0.0.3"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/page-table.git"
documentation = "https://docs.rs/page-table"
license = "MIT"
readme = "README.md"
keywords = ["pagetable", "mmu"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"
